--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="server_url">http://127.0.0.1:8000/books/</string>
+
     <string name="app_name">Polochka</string>
     <string name="InputText">Polochka</string>
     <string-array name="book_titles">
